<resources>
    <string name="app_name">Extractor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="summary">Summary</string>
    <string name="choose_the_time">Choose the time</string>
    <string name="notes">Notes</string>
    <string name="update">Update</string>
    <string name="add_another">Add Another</string>
    <string name="delete">Delete</string>
    <string name="remind_me">Remind Me</string>
    <string name="extractor">Extractor</string>
    <string name="update_note">Update Note</string>
    <string name="alerts_this_day">Alerts this day</string>
    <string name="put_your_text_here">Put your text here</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="extract">Extract</string>
    <string name="title_auto_add_subject">Auto Add Subject</string>
    <string name="title_msg">Message</string>
    <string name="update_alarm">Update Alarm</string>
    <string name="add_new_alarm">Add New Alarm</string>
</resources>